0.6.3 (?/?/2013):
-----------------

- Modified ISO-9660 driver so that it can handle discs with other than
  2048-byte sectors. This makes it useful for reading "hybrid ISO" images
  burned to USB flash disks.

- New mvrefind.sh script to move a rEFInd installation between a standard
  location (typically EFI/refind) or one of the fallback locations
  (EFI/BOOT or EFI/Microsoft/Boot). It can also do more exotic locations.

- The install.sh script now installs to EFI/BOOT/bootx64.efi or
  EFI/Microsoft/Boot/bootmgfw.efi if it's run in BIOS mode. This is
  intended to give some chance of producing a bootable installation should
  a user accidentally install Linux in EFI mode and then install rEFInd
  from that installation.

- The install.sh script now tries to find an existing rEFInd installation
  and upgrade it, even if it's in EFI/BOOT or EFI/Microsoft/Boot rather
  than in EFI/refind.

- New "--yes" option to install.sh to help with unattended or automated
  installations (as from an RPM or Debian package).

0.6.2 (12/30/2012):
-------------------

- Inclusion of a sample refind.spec file for the benefit of RPM
  distribution maintainers who might want to include rEFInd. It's a bit
  rough, but it gets you a good chunk of the way there....

- The EFI filesystem drivers can now be built with the GNU-EFI toolkit as
  well as with the TianoCore EDK2. See the BUILDING.txt file for details on
  how to build them with either toolkit. This improvement doesn't affect
  users of my binary packages, but it should make it easier for Linux
  distributions to adopt rEFInd into their package systems.

- Tweaked refind.inf file for better build results using "native" TianoCore
  EDK2 build process (vs. the Makefile-based build process that I use under
  Linux). This won't affect those who use my binary builds or build under
  Linux with the "make" command.

- Fixed bug that prevented Secure Boot launches from working when rEFInd